[DD, DLG] Updated MAX-30102 driver to run in HR mode

--- a/020_Test/010_Gogeta/scripts/sbf2blf_converter/DLG.cfg
+++ b/020_Test/010_Gogeta/scripts/sbf2blf_converter/DLG.cfg
@@ -1,4 +1,4 @@
-;CANalyzer Version |4|10|0|54004 DLG 
+;CANalyzer Version |4|10|0|37617 DLG 
 Version: 10.0.125 Build 125
 32 PRO
 0
@@ -518,12 +518,12 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 1
 2000
-305
+321
 0
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-384
+400
 0
 0
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -598,7 +598,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 0 0 998 625
+1 0 0 1 -1 -1 -1 -1 0 0 1042 848
 
 1
 
@@ -628,10 +628,10 @@ END_OF_DOCK_INFO
 1591 848
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 0 998 625
+0 1 -1 -1 -8 -31 368 164 1366 789
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-1
+0
 0
 0
 0
@@ -705,7 +705,7 @@ VOfflineCfgData 7 Begin_Of_Object
 VReplayCfgBase 8 Begin_Of_Object
 1
 1
-<VFileName V7 QL> 1 "E:\ABC123.blf" 
+<VFileName V7 QL> 1 "E:\XC12C45D.blf" 
 1
 End_Of_Object VReplayCfgBase 8
 VCfgBreakCondition 8 Begin_Of_Object
@@ -2409,7 +2409,7 @@ End_Of_Object VTraceColumnConfiguration 15
 0
 VTraceControlFixedModeExpansionItems 15 Begin_Of_Object
 3
-13
+12
 VConfigError 16 Begin_Of_Object
 1
 VConfigBusEvent 17 Begin_Of_Object
@@ -2474,40 +2474,6 @@ End_Of_Object VConfigBusObject 17
 VDatabaseBusMessageId 17 Begin_Of_Object
 3
 2566890282
-2
-1
-0
-0
-0
-
-0
-
-0
-1
-End_Of_Object VDatabaseBusMessageId 17
-NULL
-0
-0
-0
-End_Of_Object VConfigMessage 16
-VConfigMessage 16 Begin_Of_Object
-5
-VConfigBusObject 17 Begin_Of_Object
-1
-VConfigBusEvent 18 Begin_Of_Object
-1
-VConfigEvent 19 Begin_Of_Object
-1
-End_Of_Object VConfigEvent 19
-2
-1
-End_Of_Object VConfigBusEvent 18
-End_Of_Object VConfigBusObject 17
-9
-1
-VDatabaseBusMessageId 17 Begin_Of_Object
-3
-2550402858
 2
 1
 0
@@ -2842,7 +2808,6 @@ End_Of_Object VConfigMessage 16
 0
 0
 0
-0
 End_Of_Object VTraceControlFixedModeExpansionItems 15
 14
 C:\Projects\WABCO\Git\WABCO\070_Test\CANoe\CANoe_Tool\vehicle_sim
@@ -3026,7 +2991,7 @@ VUniqueBox 16 Begin_Of_Object
 VBoxRoot 17 Begin_Of_Object
 1
 2
-1 1 2 3 -1 -1 -8 -31 -154 99 1766 1199
+1 0 2 3 -1 -1 -8 -31 -154 99 1766 1199
 Graphics
 1
 
@@ -3038,7 +3003,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 1
@@ -3049,7 +3014,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 1
@@ -3060,7 +3025,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+0
 0
 0
 1
@@ -3281,7 +3246,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_xa
-"" 1 ccffcc -0.374 1.626 -100. 100. 1 -3.66693 0 0 576000000 1 1 0 0
+"" 1 ccffcc -0.70533187 2.8117696 -100. 100. 2 -3.66693 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3362,7 +3327,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_xg
-"" 1 ccff -0.942 1.058 -100. 100. 1 2.01307 0 0 576000000 1 1 0 0
+"" 1 ccff -1.6082788 6.0245429 -100. 100. 5 2.01307 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3443,7 +3408,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_ya
-"" 1 ffcc00 -0.347 1.653 -100. 100. 1 -3.93693 0 0 576000000 1 1 0 0
+"" 1 ffcc00 -13120.744 12883.18 -100. 100. 20000 -3.93693 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -3524,7 +3489,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_factory_trim_dev_yg
-"" 1 969696 -1.106 0.894 -100. 100. 1 3.65307 0 0 576000000 1 1 0 0
+"" 1 969696 -3.2347821 1.502457 -100. 100. 5 3.65307 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4253,7 +4218,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_gyro_x
-"" 223 ff 0. 7722. -100. 100. 1000 0 0 0 576000000 1 1 0 0
+"" 223 ff -4.343273e+008 7.5130202e+008 -100. 100. 2e+008 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4334,7 +4299,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_gyro_y
-"" 223 ff6633 -3915. 16467. -100. 100. 2000 -3.655 0 0 576000000 1 1 0 0
+"" 223 ff6633 0. 4826. -100. 100. 500 -3.655 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4415,7 +4380,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_gyro_z
-"" 223 ffff00 0. 8198. -100. 100. 1000 -3.655 0 0 576000000 1 1 0 0
+"" 223 ffff00 0. 6037. -100. 100. 1000 -3.655 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4496,7 +4461,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_accel_x
-"" 223 ff00ff -3764. 25972. -100. 100. 5000 0 0 0 576000000 1 1 0 0
+"" 223 ff00ff -8.9979541e+008 1.5564716e+009 -100. 100. 5e+008 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4577,7 +4542,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_accel_y
-"" 223 ffff 0. 12752. -100. 100. 2000 0 0 0 576000000 1 1 0 0
+"" 223 ffff 0. 9220. -100. 100. 1000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4658,7 +4623,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_raw_accel_z
-"" 223 ff00 0. 28900. -100. 100. 5000 0 0 0 576000000 1 1 0 0
+"" 223 ff00 0. 22440. -100. 100. 5000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4739,7 +4704,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_temperature_raw
-"" 159 ffffcc 188.34146 1442.3415 -100. 100. 100 -6.61439 0 0 576000000 1 1 0 0
+"" 159 ffffcc -3.1749066e+008 2.5300563e+008 -100. 100. 5e+007 -6.61439 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4820,7 +4785,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_temperature_deg
-"deg" 1 cc99 3.7292811 28.559281 -100. 100. 2 -9.79937 0 0 576000000 1 1 0 0
+"deg" 1 cc99 0. 27.27 -100. 100. 2 -9.79937 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4901,7 +4866,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_is_calibrated
-"" 159 c0c0c0 -1. 1. -100. 100. 1 2.59307 0 1 576000000 1 1 0 0
+"" 159 c0c0c0 -1545781.8 5524653.4 -100. 100. 1e+006 2.59307 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -4982,7 +4947,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_self_test_passed
-"" 159 ffffff 0. 2. -100. 100. 1 -7.40693 0 1 576000000 1 1 0 0
+"" 159 ffffff -92.314522 102.83464 -100. 100. 50 -7.40693 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5063,7 +5028,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_chip_id
-"" 159 99ff 114. 116. -100. 100. 1 -1147.41 0 0 576000000 1 1 0 0
+"" 159 99ff 112.71884 116.59685 -100. 100. 1 -1147.41 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5144,7 +5109,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ICM_20600_device_state
-"" 159 cc99ff 2. 4. -100. 100. 1 -27.4069 0 1 576000000 1 1 0 0
+"" 159 cc99ff -1.3761661 6.7549402 -100. 100. 2 -27.4069 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5225,7 +5190,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_ir_data_raw
-"" 159 ff99cc 0. 91. -100. 100. 10 -10.4501 0 0 576000000 1 1 0 0
+"" 159 ff99cc 175215.48 185603.8 -100. 100. 1000 -10.4501 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5306,7 +5271,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_red_data_raw
-"" 159 ffcc99 0. 91. -100. 100. 10 0 0 0 576000000 1 1 0 0
+"" 159 ffcc99 -1. 1. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5387,7 +5352,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_temperature
-"deg" 1 ff00ff 0. 91. -100. 100. 10 -0.280683 0 0 576000000 1 1 0 0
+"deg" 1 ff00ff 29.31 32.68 -100. 100. 0.5 -0.280683 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5468,7 +5433,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_temp_raw_frac
-"" 159 cc99 -1. 1. -100. 100. 1 2.59307 0 0 576000000 1 1 0 0
+"" 159 cc99 -5.3198941 21.035691 -100. 100. 10 2.59307 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5549,7 +5514,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_temp_raw_int
-"" 159 ffffcc 0. 91. -100. 100. 50 -11.1104 0 0 576000000 1 1 0 0
+"" 159 ffffcc -36419.792 53914.218 -100. 100. 50000 -11.1104 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5630,7 +5595,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_mode
-"" 159 ccffcc 0. 91. -100. 100. 50 -17.4069 0 0 576000000 1 1 0 0
+"" 159 ccffcc -0.85198333 2.3368581 -100. 100. 1 -17.4069 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5711,7 +5676,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_write_ptr
-"" 159 ccff 0. 91. -100. 100. 50 -9.42509 0 0 576000000 1 1 0 0
+"" 159 ccff 0. 31. -100. 100. 10 -9.42509 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5792,7 +5757,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_read_ptr
-"" 159 ffcc00 0. 91. -100. 100. 50 -11.4807 0 0 576000000 1 1 0 0
+"" 159 ffcc00 0. 31. -100. 100. 10 -11.4807 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5873,7 +5838,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_rev_id
-"" 159 969696 0. 91. -100. 100. 50 -27.4069 0 0 576000000 1 1 0 0
+"" 159 969696 2. 4. -100. 100. 1 -27.4069 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5954,7 +5919,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_part_id
-"" 159 66ff 0. 91. -100. 100. 50 -205.609 0 0 576000000 1 1 0 0
+"" 159 66ff 20. 22. -100. 100. 1 -205.609 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6116,7 +6081,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DLG_LOG_global_msg_counter
-"" 159 cc99ff 30.087291 121.08729 -100. 100. 100 -9.44384 0 0 576000000 1 1 0 0
+"" 159 cc99ff -0.64441592 182.35558 -100. 100. 200 -9.44384 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6197,7 +6162,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_I2C_error_state
-"" 159 ff6633 -1. 1. -100. 100. 1 2.59307 0 1 576000000 1 1 0 0
+"" 159 ff6633 -1.0179718 0.98202824 -100. 100. 2 2.59307 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6278,7 +6243,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_I2C_error_device_addr
-"" 159 c0c0c0 -1. 1. -100. 100. 1 2.59307 0 1 576000000 1 1 0 0
+"" 159 c0c0c0 -1.0179718 0.98202824 -100. 100. 2 2.59307 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6359,7 +6324,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_I2C_error_register_addr
-"" 159 ffff00 -1. 1. -100. 100. 1 2.59307 0 0 576000000 1 1 0 0
+"" 159 ffff00 -1.6869401 2.2628139 -100. 100. 5 2.59307 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6440,7 +6405,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_I2C_error_code
-"" 223 ffffff -1. 1. -100. 100. 1 2.59307 0 1 576000000 1 1 0 0
+"" 223 ffffff -1.0179718 0.98202824 -100. 100. 2 2.59307 0 1 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6521,9 +6486,9 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_I2C_error_access_type
-"" 159 99ff -1. 1. -100. 100. 1 2.59307 0 0 576000000 1 1 0 0
+"" 159 99ff -1.0179718 0.98202824 -100. 100. 2 2.59307 0 0 576000000 1 1 0 0
 [GraphWindow:x_x_x_x_x_x_WindowBk_Grid_AxisBk_XAxisFr_YAxisFr_x_x_x_x_x_x]
-0 91177.372619999995 91174.816600000006 200000 576000000 0 0 8000 0 ffffff ffffff 1 1 1 1 1 0
+111256.21255 648361.83051999996 90814.386209999997 200000 576000000 0 0 8000 0 ffffff ffffff 1 1 1 1 1 0
 0 30 5000
 0
 0 100
@@ -6534,7 +6499,7 @@ DD_I2C_error_access_type
 0
 1
 41943040
-0
+24
 VLogExportPersister 15 Begin_Of_Object
 7
 1416
@@ -6695,7 +6660,7 @@ VLogCfgData 15 Begin_Of_Object
 0
 3
 0
-305
+321
 1
 1
 0
@@ -6786,8 +6751,8 @@ End_Of_Object VLogCfgData 15
 1
 0
 1 12
-1 1 1 0 0 0 0 0 0 0 0 0 
-0 1 2 -1 -1 -1 -1 -1 -1 -1 -1 -1 
+1 1 1 1 1 0 0 0 0 0 0 0 
+0 1 2 4 3 -1 -1 -1 -1 -1 -1 -1 
 26 25 246 179 55 55 55 55 57 57 82 30 
 509 80
 0
@@ -6972,7 +6937,7 @@ VLogCfgData 20 Begin_Of_Object
 0
 3
 1
-305
+321
 1
 1
 0
@@ -7272,7 +7237,7 @@ END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
 END_OF_DESKTOP_MEMBER
-{CDB5163A-1EB0-4936-BE21-41F204898CE4}
+{E798E719-6332-41A7-A182-0A85D75BB030}
 0
 End_Of_Object VBoxRoot 5
 1 -1 0 0 0 0 0 0 0 0 0 0
@@ -7430,7 +7395,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 494 139 1908 1039
+22 2 3 -32000 -32000 -1 -1 69 577 1483 1477
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -9876,7 +9841,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+1
 0
 0
 1
@@ -10434,7 +10399,7 @@ _size
 1
 Int32
 _version
-370
+400
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -10687,7 +10652,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-305
+321
 1
 1
 0
@@ -11329,7 +11294,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+2
 0
 0
 0
