--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -14,19 +14,19 @@
 
 idf_component_register(SRCS "Config/dd_icm-20600_cfg.c"
                             "Config/dd_max-30102_cfg.c"
-                            "Config/dd_xr-18910_cfg.c"
+                            "Config/dd_pga-302_cfg.c"
                             "Config/dd_i2c_cfg.c"
                             "Config/dd_sd_cfg.c"
                             "Core/dd_database.c"
                             "Core/dd_icm-20600.c"
                             "Core/dd_max-30102.c"
-                            "Core/dd_xr-18910.c"
+                            "Core/dd_pga-302.c"
                             "Core/dd_i2c.c"
                             "Core/dd_sd.c"
                             "Interface/dd_i2c_if.c"
                             "Interface/dd_icm-20600_if.c"
                             "Interface/dd_max-30102_if.c"
-                            "Interface/dd_xr-18910_if.c"
+                            "Interface/dd_pga-302_if.c"
                             "Interface/dd_sd_if.c"
                             "DD.c"
                        INCLUDE_DIRS "."
