[DD, OS] Converted ICM-20600 into a class
CAUTION:

assertion "DD_STATE_CALIB == dd_icm_20600_data_s.dev_state_s.state_e" failed: file "../DD/Core/dd_icm-20600.cpp", line 156, function: static void DD_ICM_20600_C::run()
abort() was called at PC 0x400dac53 on core 0

ELF file SHA256: 1f84f41a92b3005d1eadc80c3cc0531a78ffad3bfb4b3eea8ed0a91ef8611a09

Backtrace: 0x400870d1:0x3ffb5550 0x40087459:0x3ffb5570 0x400dac53:0x3ffb5590 0x400d727e:0x3ffb55c0 0x400d6c4f:0x3ffb55e0 0x400d6b9b:0x3ffb5600 0x400d1038:0x3ffb5640 0x40089f75:0x3ffb5660

--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -13,19 +13,19 @@
 # *********************************************************************/
 
 idf_component_register(SRCS 
-                            #"Config/dd_icm-20600_cfg.c"
+                            "Config/dd_icm-20600_cfg.cpp"
                             #"Config/dd_max-30102_cfg.c"
                             #"Config/dd_pga-302_cfg.c"
                             "Config/dd_i2c_cfg.cpp"
                             #"Config/dd_sd_cfg.c"
                             "Core/dd_database.cpp"
-                            #"Core/dd_icm-20600.c"
+                            "Core/dd_icm-20600.cpp"
                             #"Core/dd_max-30102.c"
                             #"Core/dd_pga-302.c"
                             "Core/dd_i2c.cpp"
                             #"Core/dd_sd.c"
                             "Interface/dd_i2c_if.cpp"
-                            #"Interface/dd_icm-20600_if.c"
+                            "Interface/dd_icm-20600_if.cpp"
                             #"Interface/dd_max-30102_if.c"
                             #"Interface/dd_pga-302_if.c"
                             #"Interface/dd_sd_if.c"
