[UTIL] Refactored domain to only include currently used modules

--- a/010_Main_Application/CMakeLists.txt
+++ b/010_Main_Application/CMakeLists.txt
@@ -23,7 +23,7 @@ set(EXTRA_COMPONENT_DIRS "OS"
                          "DD"
                          "SENSE"
                          "VE"
-                         # "UTIL"
+                         "UTIL"
                          )
 
 # Add IDF specific environment
