--- a/020_Test/010_Gogeta/scripts/sbf2blf_converter/DLG.cfg
+++ b/020_Test/010_Gogeta/scripts/sbf2blf_converter/DLG.cfg
@@ -1,4 +1,4 @@
-;CANalyzer Version |4|10|0|54005 DLG 
+;CANalyzer Version |4|10|0|37620 DLG 
 Version: 10.0.114 Build 114
 32 PRO
 0
@@ -518,12 +518,12 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 1
 2000
-323
+324
 0
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-407
+408
 0
 0
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -3165,7 +3165,7 @@ TypeRef:2
 --TextFormatter: End of Object--
 VSignalObjectStreamer 14 Begin_Of_Object
 1
-46
+50
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -5514,7 +5514,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_MAX_30102_temp_raw_int
-"" 159 ffffcc -36419.793 53914.219 -100. 100. 5000 -11.1104 0 0 576000000 1 1 0 0
+"" 159 ffffcc -36419.793 53914.219 -100. 100. 100000 -11.1104 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6455,7 +6455,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ADC_A
+DD_ADC_DATA
 0
 DLG
 0
@@ -6477,7 +6477,7 @@ CAN1
 DLG
 DLG
 70
-DD_ADC_A
+DD_ADC_DATA
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -6486,7 +6486,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ADC_voltage
-"mV" 159 ffff 75. 1045. -100. 100. 200 0 0 0 576000000 1 1 0 0
+"mV" 159 ffff 75. 1045. -100. 100. 1000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6536,7 +6536,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ADC_A
+DD_ADC_DATA
 0
 DLG
 0
@@ -6558,7 +6558,7 @@ CAN1
 DLG
 DLG
 70
-DD_ADC_A
+DD_ADC_DATA
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -6567,7 +6567,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ADC_raw_data
-"" 159 ff00 0. 4095. -100. 100. 1000 0 0 0 576000000 1 1 0 0
+"" 159 ff00 0. 4095. -100. 100. 5000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6617,7 +6617,7 @@ VDatabaseBusMessageId 21 Begin_Of_Object
 0
 0
 0
-DD_ADC_A
+DD_ADC_DATA
 0
 DLG
 0
@@ -6639,7 +6639,7 @@ CAN1
 DLG
 DLG
 70
-DD_ADC_A
+DD_ADC_DATA
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -6648,7 +6648,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ADC_previous_raw_data
-"" 159 ff 0. 4095. -100. 100. 1000 0 0 0 576000000 1 1 0 0
+"" 159 ff 0. 4095. -100. 100. 5000 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6692,13 +6692,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-71
+70
 1
 1
 0
 0
 0
-DD_ADC_B
+DD_ADC_DATA
 0
 DLG
 0
@@ -6719,8 +6719,8 @@ DD_ADC_filtered_level
 CAN1
 DLG
 DLG
-71
-DD_ADC_B
+70
+DD_ADC_DATA
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -6729,7 +6729,7 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ADC_filtered_level
-"" 1 ff6633 0. 0.99 -100. 100. 0.1 0 0 0 576000000 1 1 0 0
+"" 1 ff6633 0. 1. -100. 100. 1 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6773,13 +6773,13 @@ End_Of_Object VConfigBusObject 21
 1
 VDatabaseBusMessageId 21 Begin_Of_Object
 3
-71
+70
 1
 1
 0
 0
 0
-DD_ADC_B
+DD_ADC_DATA
 0
 DLG
 0
@@ -6800,8 +6800,8 @@ DD_ADC_raw_level
 CAN1
 DLG
 DLG
-71
-DD_ADC_B
+70
+DD_ADC_DATA
 0
 4294967295
 End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
@@ -6810,7 +6810,331 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DD_ADC_raw_level
-"" 1 ffff00 0. 1. -100. 100. 0.1 0 0 0 576000000 1 1 0 0
+"" 1 ffff00 0. 1. -100. 100. 0.2 0 0 0 576000000 1 1 0 0
+VSignalObject 15 Begin_Of_Object
+1
+VSignalObjectBase 16 Begin_Of_Object
+1
+VHostSignal 17 Begin_Of_Object
+2
+0
+SENSE_TS_alpha_adc_level
+0
+End_Of_Object VHostSignal 17
+2
+VSignalState 17 Begin_Of_Object
+1
+0
+1
+End_Of_Object VSignalState 17
+End_Of_Object VSignalObjectBase 16
+15
+ValueObjectConfiguration::VConfiguredDBSignal 16 Begin_Of_Object
+3
+ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17 Begin_Of_Object
+1
+ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18 Begin_Of_Object
+1
+VConfigCANFrame 19 Begin_Of_Object
+5
+VConfigMessage 20 Begin_Of_Object
+5
+VConfigBusObject 21 Begin_Of_Object
+1
+VConfigBusEvent 22 Begin_Of_Object
+1
+VConfigEvent 23 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 23
+1
+1
+End_Of_Object VConfigBusEvent 22
+End_Of_Object VConfigBusObject 21
+31
+1
+VDatabaseBusMessageId 21 Begin_Of_Object
+3
+80
+1
+1
+0
+0
+0
+SENSE_TS_Data
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 21
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 20
+End_Of_Object VConfigCANFrame 19
+End_Of_Object ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18
+End_Of_Object ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17
+SENSE_TS_alpha_adc_level
+1
+1
+1
+CAN1
+DLG
+
+80
+SENSE_TS_Data
+0
+4294967295
+End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
+
+End_Of_Serialized_Data 15
+End_Of_Object VSignalObject 15
+[MeasurementObject]
+SENSE_TS_alpha_adc_level
+"" 1 c0c0c0 0. 1. -100. 100. 0.2 0 0 0 576000000 1 1 0 0
+VSignalObject 15 Begin_Of_Object
+1
+VSignalObjectBase 16 Begin_Of_Object
+1
+VHostSignal 17 Begin_Of_Object
+2
+0
+SENSE_TS_alpha_beta_adc_level
+0
+End_Of_Object VHostSignal 17
+2
+VSignalState 17 Begin_Of_Object
+1
+0
+1
+End_Of_Object VSignalState 17
+End_Of_Object VSignalObjectBase 16
+15
+ValueObjectConfiguration::VConfiguredDBSignal 16 Begin_Of_Object
+3
+ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17 Begin_Of_Object
+1
+ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18 Begin_Of_Object
+1
+VConfigCANFrame 19 Begin_Of_Object
+5
+VConfigMessage 20 Begin_Of_Object
+5
+VConfigBusObject 21 Begin_Of_Object
+1
+VConfigBusEvent 22 Begin_Of_Object
+1
+VConfigEvent 23 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 23
+1
+1
+End_Of_Object VConfigBusEvent 22
+End_Of_Object VConfigBusObject 21
+31
+1
+VDatabaseBusMessageId 21 Begin_Of_Object
+3
+80
+1
+1
+0
+0
+0
+SENSE_TS_Data
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 21
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 20
+End_Of_Object VConfigCANFrame 19
+End_Of_Object ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18
+End_Of_Object ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17
+SENSE_TS_alpha_beta_adc_level
+1
+1
+1
+CAN1
+DLG
+
+80
+SENSE_TS_Data
+0
+4294967295
+End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
+
+End_Of_Serialized_Data 15
+End_Of_Object VSignalObject 15
+[MeasurementObject]
+SENSE_TS_alpha_beta_adc_level
+"" 1 ffffff 0. 1. -100. 100. 0.2 0 0 0 576000000 1 1 0 0
+VSignalObject 15 Begin_Of_Object
+1
+VSignalObjectBase 16 Begin_Of_Object
+1
+VHostSignal 17 Begin_Of_Object
+2
+0
+SENSE_TS_touch_confidence
+0
+End_Of_Object VHostSignal 17
+2
+VSignalState 17 Begin_Of_Object
+1
+0
+1
+End_Of_Object VSignalState 17
+End_Of_Object VSignalObjectBase 16
+15
+ValueObjectConfiguration::VConfiguredDBSignal 16 Begin_Of_Object
+3
+ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17 Begin_Of_Object
+1
+ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18 Begin_Of_Object
+1
+VConfigCANFrame 19 Begin_Of_Object
+5
+VConfigMessage 20 Begin_Of_Object
+5
+VConfigBusObject 21 Begin_Of_Object
+1
+VConfigBusEvent 22 Begin_Of_Object
+1
+VConfigEvent 23 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 23
+1
+1
+End_Of_Object VConfigBusEvent 22
+End_Of_Object VConfigBusObject 21
+31
+1
+VDatabaseBusMessageId 21 Begin_Of_Object
+3
+80
+1
+1
+0
+0
+0
+SENSE_TS_Data
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 21
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 20
+End_Of_Object VConfigCANFrame 19
+End_Of_Object ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18
+End_Of_Object ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17
+SENSE_TS_touch_confidence
+1
+1
+1
+CAN1
+DLG
+
+80
+SENSE_TS_Data
+0
+4294967295
+End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
+
+End_Of_Serialized_Data 15
+End_Of_Object VSignalObject 15
+[MeasurementObject]
+SENSE_TS_touch_confidence
+"" 1 99ff 0. 1. -100. 100. 0.2 0 0 0 576000000 1 1 0 0
+VSignalObject 15 Begin_Of_Object
+1
+VSignalObjectBase 16 Begin_Of_Object
+1
+VHostSignal 17 Begin_Of_Object
+2
+0
+SENSE_TS_touch_confidence_max
+0
+End_Of_Object VHostSignal 17
+2
+VSignalState 17 Begin_Of_Object
+1
+0
+1
+End_Of_Object VSignalState 17
+End_Of_Object VSignalObjectBase 16
+15
+ValueObjectConfiguration::VConfiguredDBSignal 16 Begin_Of_Object
+3
+ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17 Begin_Of_Object
+1
+ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18 Begin_Of_Object
+1
+VConfigCANFrame 19 Begin_Of_Object
+5
+VConfigMessage 20 Begin_Of_Object
+5
+VConfigBusObject 21 Begin_Of_Object
+1
+VConfigBusEvent 22 Begin_Of_Object
+1
+VConfigEvent 23 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 23
+1
+1
+End_Of_Object VConfigBusEvent 22
+End_Of_Object VConfigBusObject 21
+31
+1
+VDatabaseBusMessageId 21 Begin_Of_Object
+3
+80
+1
+1
+0
+0
+0
+SENSE_TS_Data
+0
+DLG
+0
+1
+End_Of_Object VDatabaseBusMessageId 21
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 20
+End_Of_Object VConfigCANFrame 19
+End_Of_Object ValueObjectConfiguration::Detail::AbstractConfiguredValueObject 18
+End_Of_Object ValueObjectConfiguration::Detail::VConfiguredValueObjectBase<class_ValueObjectConfiguration::IConfiguredDBSignal> 17
+SENSE_TS_touch_confidence_max
+1
+1
+1
+CAN1
+DLG
+
+80
+SENSE_TS_Data
+0
+4294967295
+End_Of_Object ValueObjectConfiguration::VConfiguredDBSignal 16
+
+End_Of_Serialized_Data 15
+End_Of_Object VSignalObject 15
+[MeasurementObject]
+SENSE_TS_touch_confidence_max
+"" 1 cc99ff 0. 1. -100. 100. 0.2 0 0 0 576000000 1 1 0 0
 VSignalObject 15 Begin_Of_Object
 1
 VSignalObjectBase 16 Begin_Of_Object
@@ -6891,9 +7215,9 @@ End_Of_Serialized_Data 15
 End_Of_Object VSignalObject 15
 [MeasurementObject]
 DLG_LOG_global_msg_counter
-"" 159 cc99ff -1. 1. -100. 100. 2 -9.44384 0 0 576000000 1 1 0 0
+"" 159 cc99ff 0. 255. -100. 100. 10 -9.44384 0 0 576000000 1 1 0 0
 [GraphWindow:x_x_x_x_x_x_WindowBk_Grid_AxisBk_XAxisFr_YAxisFr_x_x_x_x_x_x]
-0 479909.92290000001 8174381.8602 200000 576000000 0 0 8000 0 ffffff ffffff 1 1 1 1 1 0
+0 425807.98917000002 425807.98917000002 200000 576000000 0 0 8000 0 ffffff ffffff 1 1 1 1 1 0
 0 30 5000
 0
 0 100
@@ -7001,7 +7325,7 @@ Tahoma
 779
 0 10
 1
-10
+11
 1
 0 11
 ICM_20600_Factory_Trim
@@ -7048,7 +7372,12 @@ ADC12
 ADC12
 10223615 0
 1
-45 45
+45 48
+SENSE TS
+SENSE TS
+15132390 0
+1
+49 49
 
 DLG_LOG_global_msg_counter
 13408767 0
@@ -7070,7 +7399,7 @@ VLogCfgData 15 Begin_Of_Object
 0
 3
 0
-323
+324
 1
 1
 0
@@ -7147,6 +7476,7 @@ End_Of_Object VLogCfgData 15
 1 40 20 15
 0 1000000000
 2
+0
 0
 0
 0
@@ -7348,7 +7678,7 @@ VLogCfgData 20 Begin_Of_Object
 0
 3
 1
-323
+324
 1
 1
 0
@@ -7648,7 +7978,7 @@ END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
 END_OF_DESKTOP_MEMBER
-{287EB09A-ECE6-4B6C-9F8D-8EBCF4351056}
+{B93903E1-B695-4CEB-A81C-3EB5EE65972B}
 0
 End_Of_Object VBoxRoot 5
 1 -1 0 0 0 0 0 0 0 0 0 0
@@ -8128,6 +8458,9 @@ End_Of_Object VSignalGeneratorStreamer 2
 </NodeProperties>
 <NodeProperties>
 <NodeKey>{RootSymbolItem/DLG{VNetworkItem/{FrameGroupItem/VFrameItem{DLG_LOG_General{</NodeKey>
+</NodeProperties>
+<NodeProperties>
+<NodeKey>{RootSymbolItem/DLG{VNetworkItem/{FrameGroupItem/VFrameItem{SENSE_TS_Data{</NodeKey>
 </NodeProperties>
 <NodeProperties>
 <IsClosed>true</IsClosed>
@@ -10804,7 +11137,7 @@ _size
 1
 Int32
 _version
-410
+418
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -11057,7 +11390,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-323
+324
 1
 1
 0
