--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -17,17 +17,20 @@ idf_component_register(SRCS "Config/dd_icm-20600_cfg.c"
                             "Config/dd_adc_cfg.c"
                             "Config/dd_i2c_cfg.c"
                             "Config/dd_sd_cfg.c"
+                            "Config/dd_mcpwm_cfg.c"
                             "Core/dd_database.c"
                             "Core/dd_icm-20600.c"
                             "Core/dd_max-30102.c"
                             "Core/dd_adc.c"
                             "Core/dd_i2c.c"
                             "Core/dd_sd.c"
+                            "Core/dd_mcpwm.c"
                             "Interface/dd_i2c_if.c"
                             "Interface/dd_icm-20600_if.c"
                             "Interface/dd_max-30102_if.c"
                             "Interface/dd_adc_if.c"
                             "Interface/dd_sd_if.c"
+                            "Interface/dd_mcpwm_if.c"
                             "DD.c"
                        INCLUDE_DIRS "."
                        REQUIRES fatfs esp_adc_cal)
