--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -12,28 +12,31 @@
 #
 # *********************************************************************/
 
-idf_component_register(SRCS "Config/dd_icm-20600_cfg.c"
-                            "Config/dd_max-30102_cfg.c"
-                            "Config/dd_ina-219_cfg.c"
-                            "Config/dd_adc_cfg.c"
+idf_component_register(SRCS "Config/dd_adc_cfg.c"
                             "Config/dd_i2c_cfg.c"
-                            "Config/dd_sd_cfg.c"
+                            "Config/dd_icm-20600_cfg.c"
+                            "Config/dd_ina-219_cfg.c"
+                            "Config/dd_max-30102_cfg.c"
                             "Config/dd_mcpwm_cfg.c"
-                            "Core/dd_database.c"
-                            "Core/dd_icm-20600.c"
-                            "Core/dd_max-30102.c"
-                            "Core/dd_ina-219.c"
+                            "Config/dd_sd_cfg.c"
+                            "Config/dd_tmp-102_cfg.c"
                             "Core/dd_adc.c"
+                            "Core/dd_database.c"
                             "Core/dd_i2c.c"
-                            "Core/dd_sd.c"
+                            "Core/dd_icm-20600.c"
+                            "Core/dd_ina-219.c"
+                            "Core/dd_max-30102.c"
                             "Core/dd_mcpwm.c"
+                            "Core/dd_sd.c"
+                            "Core/dd_tmp-102.c"
+                            "Interface/dd_adc_if.c"
                             "Interface/dd_i2c_if.c"
                             "Interface/dd_icm-20600_if.c"
-                            "Interface/dd_max-30102_if.c"
                             "Interface/dd_ina-219_if.c"
-                            "Interface/dd_adc_if.c"
-                            "Interface/dd_sd_if.c"
+                            "Interface/dd_max-30102_if.c"
                             "Interface/dd_mcpwm_if.c"
+                            "Interface/dd_sd_if.c"
+                            "Interface/dd_tmp-102_if.c"
                             "DD.c"
                        INCLUDE_DIRS "."
                        REQUIRES fatfs esp_adc_cal)
