[DD] Added class implementation for INA-219

--- a/010_Main_Application/CMakeLists.txt
+++ b/010_Main_Application/CMakeLists.txt
@@ -17,12 +17,13 @@ cmake_minimum_required(VERSION 3.5)
 
 
 # Set custom component directories
-set(EXTRA_COMPONENT_DIRS "OS" 
-                         "DLG"
-                         "TS"
+set(EXTRA_COMPONENT_DIRS 
+                         "OS" 
+                       #  "DLG"
+                      #   "TS"
                          "DD"
-                         "SENSE"
-                         "VE"
+                      #   "SENSE"
+                     #    "VE"
                          "UTIL"
                          )
 
