--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -12,23 +12,14 @@
 #
 # *********************************************************************/
 
-idf_component_register(SRCS "Config/dd_adc_cfg.cpp"
-                            "Config/dd_i2c_cfg.cpp"
-                            "Config/dd_icm-20600_cfg.cpp"
-                            "Config/dd_ina-219_cfg.cpp"
-                            "Config/dd_max-30102_cfg.cpp"
-                            "Config/dd_mcpwm_cfg.cpp"
-                            "Config/dd_sd_cfg.cpp"
-                            "Config/dd_tmp-102_cfg.cpp"
-                            "Core/dd_adc.cpp"
-                            "Core/dd_database.cpp"
-                            "Core/dd_i2c.cpp"
-                            "Core/dd_icm-20600.cpp"
-                            "Core/dd_ina-219.cpp"
-                            "Core/dd_max-30102.cpp"
-                            "Core/dd_mcpwm.cpp"
-                            "Core/dd_sd.cpp"
-                            "Core/dd_tmp-102.cpp"
+idf_component_register(SRCS #"dd_adc.cpp"
+                            "dd_i2c.cpp"
+                            #"dd_icm-20600.cpp"
+                            "dd_ina-219.cpp"
+                            #"dd_max-30102.cpp"
+                            #"dd_mcpwm.cpp"
+                            #"dd_sd.cpp"
+                            #"dd_tmp-102.cpp"
                             "DD.cpp"
                        INCLUDE_DIRS "."
                        REQUIRES fatfs)
