[DD] Added class implementation for MCPWM

--- a/010_Main_Application/DD/CMakeLists.txt
+++ b/010_Main_Application/DD/CMakeLists.txt
@@ -17,7 +17,7 @@ idf_component_register(SRCS "dd_adc.cpp"
                             "dd_icm-20600.cpp"
                             "dd_ina-219.cpp"
                             "dd_max-30102.cpp"
-                            #"dd_mcpwm.cpp"
+                            "dd_mcpwm.cpp"
                             "dd_sd.cpp"
                             "dd_tmp-102.cpp"
                             "DD.cpp"
