[DD, DLG, OS] Cpp ideas/input from JMD

--- a/010_Main_Application/CMakeLists.txt
+++ b/010_Main_Application/CMakeLists.txt
@@ -19,7 +19,7 @@ cmake_minimum_required(VERSION 3.5)
 # Set custom component directories
 set(EXTRA_COMPONENT_DIRS 
                          "OS" 
-                       #  "DLG"
+                         "DLG"
                       #   "TS"
                          "DD"
                       #   "SENSE"
