[VE] Inital ve_grid.cpp class implementation

--- a/010_Main_Application/VE/CMakeLists.txt
+++ b/010_Main_Application/VE/CMakeLists.txt
@@ -12,9 +12,6 @@
 #
 # *********************************************************************/
 
-idf_component_register(SRCS "Config/ve_grid_cfg.c"
-                            "Core/ve_database.c"
-                            "Core/ve_grid.c"
-                            "Interface/ve_grid_if.c"
+idf_component_register(SRCS "ve_grid.cpp"
                             "VE.c"
                        INCLUDE_DIRS ".")
