[VE] Updated ve_grid.cpp and VE.cpp implementation

--- a/010_Main_Application/VE/CMakeLists.txt
+++ b/010_Main_Application/VE/CMakeLists.txt
@@ -13,5 +13,5 @@
 # *********************************************************************/
 
 idf_component_register(SRCS "ve_grid.cpp"
-                            "VE.c"
+                            "VE.cpp"
                        INCLUDE_DIRS ".")
